add componet coins-list, small fix

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>coinmarketcap</title>
+    <link rel="stylesheet" href="https://unpkg.com/react-table@latest/react-table.css">
     </head>
   <body>
     <div id='react-root'>
